# nfiq2api_partial

./: local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/aug12/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/aug12/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/aug12/: ExampleUnitTest.java
distribution/nfiq2api/include/: nfiq2api.h
gradle/wrapper/: gradle-wrapper.properties
